cabal-version:      2.4
name:               super-lobster
version:            1.0.0
license:            Apache-2.0
license-file:       LICENSE
maintainer:         miao@decentral.ee
author:             ZC Miao
description:        Super Lobster.
build-type:         Simple
data-files:         ENGivenMale.json
extra-source-files: README.md

flag unexpected_thunks
    description: Turn on unexpected thunks checks
    default:     False

library
    exposed-modules:    Cardano.SuperLobster.LobsterScript
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
        -Wunused-packages -fobject-code -fno-ignore-interface-pragmas
        -fno-omit-interface-pragmas

    build-depends:
        base >=4.14 && <4.15,
        bytestring,
        cardano-api,
        plutus-core,
        plutus-ledger,
        plutus-ledger-api,
        plutus-tx,
        plutus-tx-plugin,
        serialise,
        superfluid-protocol-spec-core

    if os(windows)
        build-depends: Win32

    if flag(unexpected_thunks)
        cpp-options: -DUNEXPECTED_THUNKS

executable super-lobster-tokens
    main-is:            super-lobster-tokens.hs
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
        -Wunused-packages -threaded -rtsopts -with-rtsopts=-T

    build-depends:
        base >=4.14 && <4.15,
        cardano-api,
        plutus-ledger,
        super-lobster

executable super-lobster
    main-is:            super-lobster.hs
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
        -Wunused-packages -threaded -rtsopts -with-rtsopts=-T

    build-depends:
        base >=4.14 && <4.15,
        cardano-api,
        plutus-ledger,
        super-lobster

executable super-lobster-names
    main-is:         super-lobster-names.hs
    hs-source-dirs:  app
    other-modules:   Paths_super_lobster
    autogen-modules: Paths_super_lobster
    ghc-options:     -Wall
    build-depends:
        aeson,
        base,
        bytestring
